--- a/assets/scss/utils/_helpers.scss
+++ b/assets/scss/utils/_helpers.scss
@@ -127,7 +127,7 @@
 .footer {
     padding-top: 15px;
     padding-bottom: 15px;
-    background-color: #222;
+    color: #222;
 }
 
 .creds {
@@ -137,6 +137,12 @@
     font-size: rem(12);
 
     a {
-        color: #D3D3D3;
+        color: #ACACAC;
     }
+}
+
+.map {
+    min-height: 500px;
+    height: 100vh;
+    width: 100%;
 }
