--- a/assets/scss/utils/_helpers.scss
+++ b/assets/scss/utils/_helpers.scss
@@ -145,4 +145,8 @@
     min-height: 500px;
     height: 100vh;
     width: 100%;
+
+    @include respond-to('small and up') {
+        height: 50vh;
+    }
 }
